--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/ContentBlocks/Blocks/DownloadBlockTableViewCell.xib
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/ContentBlocks/Blocks/DownloadBlockTableViewCell.xib
@@ -1,46 +1,56 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7531" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="DownloadBlockTableViewCell" rowHeight="69" id="KGk-i7-Jjw" customClass="DownloadBlockTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="329" height="69"/>
+            <rect key="frame" x="0.0" y="0.0" width="329" height="75"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Yec-h6-DBB">
-                        <rect key="frame" x="8" y="8" width="52" height="52"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="grh-BE-wCl">
+                        <rect key="frame" x="0.0" y="0.0" width="329" height="68"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Yec-h6-DBB">
+                                <rect key="frame" x="8" y="8" width="52" height="52"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="52" id="QMg-Ne-eOj"/>
+                                    <constraint firstAttribute="height" constant="52" id="RH0-We-HlK"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pYX-UX-kgy">
+                                <rect key="frame" x="68" y="35" width="253" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Titel" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LGQ-fC-xb3">
+                                <rect key="frame" x="68" y="12" width="253" height="21"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.43529412150382996" blue="0.81176471710205078" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="52" id="QMg-Ne-eOj"/>
-                            <constraint firstAttribute="height" constant="52" id="RH0-We-HlK"/>
+                            <constraint firstItem="Yec-h6-DBB" firstAttribute="leading" secondItem="grh-BE-wCl" secondAttribute="leading" constant="8" id="4iR-H6-34m"/>
+                            <constraint firstItem="Yec-h6-DBB" firstAttribute="top" secondItem="LGQ-fC-xb3" secondAttribute="top" constant="-4" id="4k1-Ph-ysr"/>
+                            <constraint firstAttribute="bottom" secondItem="Yec-h6-DBB" secondAttribute="bottom" constant="8" id="AWW-q3-p4Z"/>
+                            <constraint firstAttribute="trailing" secondItem="LGQ-fC-xb3" secondAttribute="trailing" constant="8" id="DOV-Fa-7y3"/>
+                            <constraint firstItem="LGQ-fC-xb3" firstAttribute="leading" secondItem="pYX-UX-kgy" secondAttribute="leading" id="Okg-TH-aFH"/>
+                            <constraint firstItem="LGQ-fC-xb3" firstAttribute="trailing" secondItem="pYX-UX-kgy" secondAttribute="trailing" id="m3z-wJ-EBy"/>
+                            <constraint firstItem="LGQ-fC-xb3" firstAttribute="leading" secondItem="Yec-h6-DBB" secondAttribute="trailing" constant="8" id="pBb-ko-lry"/>
+                            <constraint firstItem="pYX-UX-kgy" firstAttribute="top" secondItem="LGQ-fC-xb3" secondAttribute="bottom" constant="2" id="wBE-hm-DC4"/>
+                            <constraint firstItem="Yec-h6-DBB" firstAttribute="top" secondItem="grh-BE-wCl" secondAttribute="top" constant="8" id="xa0-Jq-xjp"/>
                         </constraints>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pYX-UX-kgy">
-                        <rect key="frame" x="68" y="39" width="253" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="MdI-5B-OkF"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Titel" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LGQ-fC-xb3">
-                        <rect key="frame" x="68" y="8" width="253" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="21" id="bNB-3H-Tps"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LM6-J7-YFJ">
-                        <rect key="frame" x="0.0" y="0.0" width="329" height="69"/>
+                    </view>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LM6-J7-YFJ">
+                        <rect key="frame" x="0.0" y="0.0" width="329" height="74"/>
                         <state key="normal">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
@@ -50,15 +60,14 @@
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="LGQ-fC-xb3" firstAttribute="leading" secondItem="Yec-h6-DBB" secondAttribute="trailing" constant="8" id="20S-Bs-62T"/>
-                    <constraint firstItem="pYX-UX-kgy" firstAttribute="leading" secondItem="LGQ-fC-xb3" secondAttribute="leading" id="3cP-rN-hxy"/>
-                    <constraint firstItem="Yec-h6-DBB" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="H3k-JF-c3e"/>
-                    <constraint firstItem="pYX-UX-kgy" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="Rg3-XU-Kvn"/>
-                    <constraint firstItem="pYX-UX-kgy" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="Rhc-sh-HU7"/>
-                    <constraint firstItem="LGQ-fC-xb3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="TrL-Bj-Wgc"/>
-                    <constraint firstItem="LGQ-fC-xb3" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="hSE-0f-GeN"/>
-                    <constraint firstItem="Yec-h6-DBB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="n5B-Ji-2IP"/>
-                    <constraint firstItem="pYX-UX-kgy" firstAttribute="top" secondItem="LGQ-fC-xb3" secondAttribute="bottom" constant="10" id="vSw-6L-kfR"/>
+                    <constraint firstItem="LM6-J7-YFJ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="B7P-tz-6lE"/>
+                    <constraint firstAttribute="trailing" secondItem="LM6-J7-YFJ" secondAttribute="trailing" id="FIP-QP-JId"/>
+                    <constraint firstAttribute="bottom" secondItem="LM6-J7-YFJ" secondAttribute="bottom" id="FsM-aQ-Nzj"/>
+                    <constraint firstItem="LM6-J7-YFJ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="O5d-eG-VFa"/>
+                    <constraint firstAttribute="trailing" secondItem="grh-BE-wCl" secondAttribute="trailing" id="Y83-8p-CcL"/>
+                    <constraint firstItem="grh-BE-wCl" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="cyQ-wP-jlZ"/>
+                    <constraint firstItem="grh-BE-wCl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="mfM-5b-oXX"/>
+                    <constraint firstAttribute="bottom" secondItem="grh-BE-wCl" secondAttribute="bottom" constant="6" id="sm1-dF-B1J"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
