--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/ContentBlocks/Blocks/EbookBlockTableViewCell.xib
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/ContentBlocks/Blocks/EbookBlockTableViewCell.xib
@@ -1,46 +1,57 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7531" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="EbookBlockTableViewCell" rowHeight="69" id="KGk-i7-Jjw" customClass="EbookBlockTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="334" height="69"/>
+            <rect key="frame" x="0.0" y="0.0" width="334" height="75"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xgy-VZ-T9c">
-                        <rect key="frame" x="78" y="8" width="248" height="21"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d3v-f8-ekS">
+                        <rect key="frame" x="0.0" y="0.0" width="334" height="68"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ebook" translatesAutoresizingMaskIntoConstraints="NO" id="Zcc-62-G5Y">
+                                <rect key="frame" x="8" y="8" width="52" height="52"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="52" id="62s-JU-6u8"/>
+                                    <constraint firstAttribute="width" constant="52" id="uQ8-pO-7Sh"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xgy-VZ-T9c">
+                                <rect key="frame" x="68" y="12" width="258" height="21"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gTf-w0-lZh">
+                                <rect key="frame" x="68" y="34" width="258" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.40000000596046448" green="1" blue="0.80000001192092896" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="21" id="wnN-U1-jBt"/>
+                            <constraint firstItem="xgy-VZ-T9c" firstAttribute="leading" secondItem="gTf-w0-lZh" secondAttribute="leading" id="3pO-sD-H6O"/>
+                            <constraint firstItem="gTf-w0-lZh" firstAttribute="top" secondItem="xgy-VZ-T9c" secondAttribute="bottom" constant="1" id="KOW-qJ-lSf"/>
+                            <constraint firstAttribute="bottom" secondItem="Zcc-62-G5Y" secondAttribute="bottom" constant="8" id="Krb-c4-hOG"/>
+                            <constraint firstItem="Zcc-62-G5Y" firstAttribute="leading" secondItem="d3v-f8-ekS" secondAttribute="leading" constant="8" id="SGd-4X-V0c"/>
+                            <constraint firstItem="Zcc-62-G5Y" firstAttribute="top" secondItem="d3v-f8-ekS" secondAttribute="top" constant="8" id="fNk-ED-CsC"/>
+                            <constraint firstItem="xgy-VZ-T9c" firstAttribute="trailing" secondItem="gTf-w0-lZh" secondAttribute="trailing" id="mpb-zt-xG8"/>
+                            <constraint firstAttribute="trailing" secondItem="xgy-VZ-T9c" secondAttribute="trailing" constant="8" id="ooE-Js-loM"/>
+                            <constraint firstItem="xgy-VZ-T9c" firstAttribute="leading" secondItem="Zcc-62-G5Y" secondAttribute="trailing" constant="8" id="r3u-tM-JgS"/>
+                            <constraint firstItem="xgy-VZ-T9c" firstAttribute="top" secondItem="Zcc-62-G5Y" secondAttribute="top" constant="4" id="sYK-eZ-Qni"/>
+                            <constraint firstItem="gTf-w0-lZh" firstAttribute="top" secondItem="xgy-VZ-T9c" secondAttribute="bottom" constant="1" id="t1Q-WE-gyn"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ebook" translatesAutoresizingMaskIntoConstraints="NO" id="Zcc-62-G5Y">
-                        <rect key="frame" x="8" y="8" width="52" height="52"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="52" id="62s-JU-6u8"/>
-                            <constraint firstAttribute="width" constant="52" id="uQ8-pO-7Sh"/>
-                        </constraints>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gTf-w0-lZh">
-                        <rect key="frame" x="78" y="33" width="248" height="27"/>
-                        <constraints>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="4vM-mt-Agt"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3XW-kA-pb1">
-                        <rect key="frame" x="0.0" y="-5" width="334" height="78"/>
+                    </view>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3XW-kA-pb1">
+                        <rect key="frame" x="0.0" y="0.0" width="334" height="74"/>
                         <state key="normal">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
@@ -49,18 +60,15 @@
                         </connections>
                     </button>
                 </subviews>
-                <color key="backgroundColor" white="0.901959292763158" alpha="1" colorSpace="calibratedWhite"/>
                 <constraints>
-                    <constraint firstItem="xgy-VZ-T9c" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="2GO-rO-40X"/>
-                    <constraint firstItem="xgy-VZ-T9c" firstAttribute="leading" secondItem="Zcc-62-G5Y" secondAttribute="trailing" constant="18" id="9fi-og-s6C"/>
-                    <constraint firstItem="xgy-VZ-T9c" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="G1P-t0-sx4"/>
-                    <constraint firstItem="Zcc-62-G5Y" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="U7y-L7-EhN"/>
-                    <constraint firstItem="gTf-w0-lZh" firstAttribute="top" secondItem="xgy-VZ-T9c" secondAttribute="bottom" constant="4" id="cfu-wd-gkb"/>
-                    <constraint firstItem="Zcc-62-G5Y" firstAttribute="bottom" relation="lessThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="dRM-48-Y9v"/>
-                    <constraint firstItem="Zcc-62-G5Y" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="jd8-1H-Djj"/>
-                    <constraint firstItem="xgy-VZ-T9c" firstAttribute="leading" secondItem="gTf-w0-lZh" secondAttribute="leading" id="q9J-H6-jyj"/>
-                    <constraint firstItem="gTf-w0-lZh" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="vN4-EG-WH7"/>
-                    <constraint firstItem="gTf-w0-lZh" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="woM-7U-wUF"/>
+                    <constraint firstItem="d3v-f8-ekS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="1fJ-HE-bnO"/>
+                    <constraint firstAttribute="trailing" secondItem="3XW-kA-pb1" secondAttribute="trailing" id="4HX-DX-RUJ"/>
+                    <constraint firstItem="3XW-kA-pb1" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Dsx-7Y-bN8"/>
+                    <constraint firstItem="d3v-f8-ekS" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="E3F-w7-1PC"/>
+                    <constraint firstAttribute="trailing" secondItem="d3v-f8-ekS" secondAttribute="trailing" id="Yhm-TQ-hVo"/>
+                    <constraint firstAttribute="bottom" secondItem="d3v-f8-ekS" secondAttribute="bottom" constant="6" id="hZX-nq-Z05"/>
+                    <constraint firstAttribute="bottom" secondItem="3XW-kA-pb1" secondAttribute="bottom" id="iTZ-Bd-3fo"/>
+                    <constraint firstItem="3XW-kA-pb1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="m3x-Kl-VtV"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
